# de.mrh.version

./: AUTHORS.txt  CMakeLists.txt  README.md  README.txt  VERSION.txt
res/pkg/: Configuration.conf
res/pkg/ApplicationName/Default/: ApplicationName.txt
res/pkg/FSRoot/: FSRoot.txt
res/pkg/LaunchTrigger/Default/: LaunchTrigger.mrhit
src/: Main.cpp  Revision.h
src/Module/Version/: Version.cpp  Version.h
